-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 12
-
Component/s: hotspot
-
b14
-
generic
-
aix
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8212058 | 11.0.2 | Matthias Baesken | P3 | Resolved | Fixed | b01 |
The XX-flag AllocateHeapAt is currently not supported on AIX. Additionally I am not aware of any current plans to support it.
So the flag should be rejected at startup (and some tests using it have to be made non-AIX).
So the flag should be rejected at startup (and some tests using it have to be made non-AIX).
- backported by
-
JDK-8212058 make AllocateHeapAt an unsupported option on AIX
-
- Resolved
-
- relates to
-
JDK-8216271 Make AllocateOldGenAt an unsupported option on AIX.
-
- Resolved
-