8211208: make AllocateHeapAt an unsupported option on AIX

Reviewed-by: shade, tschatzl